@@ -42,10 +42,5 @@
     <maven-plugin-goal-prefix>ball-artifact</maven-plugin-goal-prefix>
     <maven.javadoc.skip>true</maven.javadoc.skip>
   </properties>
-  <dependencies verbose="true">
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-artifact</artifactId>
-    </dependency>
-  </dependencies>
+  <dependencies verbose="true"/>
 </project>
