@@ -1,3 +1,7 @@
+2020-02-19  Allen D. Ball  <ball@hcf.dev>
+
+	* Removed unused methods and @Parameter fields.
+
 2020-02-12  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 3.1.0.
